--- a/src/style.css
+++ b/src/style.css
@@ -71,3 +71,21 @@ li:first-letter {
   cursor: default;
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #091353;
+}
+
+.weather-forecast-date {
+  font-size: 18px;
+  opacity: 0.5;
+}
+
+.weather-forcast-temperature-min {
+  opacity: 0.5;
+}
+.weather-forcast-temperature {
+  font-size: 15px;
+}
