--- a/src/style.css
+++ b/src/style.css
@@ -7,6 +7,7 @@ h1 {
   font-size: 40px;
   line-height: 28px;
   font-weight: 100;
+  margin-bottom: 0;
 }
 
 ul {
@@ -88,4 +89,24 @@ li:first-letter {
 }
 .weather-forcast-temperature {
   font-size: 15px;
+}
+
+#search-button {
+  width: 120px;
+}
+#location-button {
+  margin-left: 20px;
+  background-color: #d5d5d5;
+  border: #d5d5d5;
+  width: 120px;
+  color: black;
+}
+
+#search-button,
+#location-button {
+  border-radius: 10px;
+}
+
+#upcoming-forecast {
+  font-size: 18px;
 }
