Added JS for location button

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@ body {
 }
 
 h1 {
-  color: #9d84b7;
+  color: #baabda;
   font-size: 40px;
   line-height: 28px;
   font-weight: 100;
@@ -11,15 +11,12 @@ h1 {
 }
 
 ul {
-  margin: 0;
-  padding: 0;
   list-style: none;
 }
 
 li {
   color: #091353;
-  margin: 0;
-  padding: 0;
+  padding-left: 0px;
   font-size: 20px;
   font-weight: 100;
   line-height: 19px;
@@ -35,11 +32,11 @@ li:first-letter {
 }
 
 .weather-app {
-  color: #9d84b7;
+  color: #d6e5fa;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 4px 4px 20px;
-  border: 1px soldi #091353;
+  border: 1px solid #d6e5fa;
 }
 
 .overview {
@@ -73,6 +70,24 @@ li:first-letter {
   text-decoration: none;
 }
 
+#search-button {
+  width: 120px;
+  background-color: #d77fa1;
+  border: #d77fa1;
+}
+#location-button {
+  margin-left: 20px;
+  background-color: #baabda;
+  border: #baabda;
+  width: 120px;
+  color: white;
+}
+
+#search-button,
+#location-button {
+  border-radius: 10px;
+}
+
 .weather-forecast {
   margin-top: 20px;
   text-align: center;
@@ -91,22 +106,7 @@ li:first-letter {
   font-size: 15px;
 }
 
-#search-button {
-  width: 120px;
-}
-#location-button {
-  margin-left: 20px;
-  background-color: #d5d5d5;
-  border: #d5d5d5;
-  width: 120px;
-  color: black;
-}
-
-#search-button,
-#location-button {
-  border-radius: 10px;
-}
-
 #upcoming-forecast {
   font-size: 18px;
+  color: black;
 }
