--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,8 @@ li:first-letter {
 }
 
 .weather-temperature img {
-  margin-right: 10px;
+  margin-right: 20px;
+  margin-left: 20px;
   float: left;
   height: 120px;
   width: 120px;
